--- a/composer.json
+++ b/composer.json
@@ -11,8 +11,10 @@
         "php": "^7.1.3",
         "fideloper/proxy": "^4.0",
         "laravel/framework": "5.8.*",
+        "laravel/scout": "^7.1",
         "laravel/tinker": "^1.0",
-        "league/flysystem-cached-adapter": "~1.0"
+        "league/flysystem-cached-adapter": "~1.0",
+        "predis/predis": "^1.1"
     },
     "require-dev": {
         "beyondcode/laravel-dump-server": "^1.0",
