--- a/composer.json
+++ b/composer.json
@@ -14,6 +14,7 @@
         "laravel/scout": "^7.1",
         "laravel/tinker": "^1.0",
         "league/flysystem-cached-adapter": "~1.0",
+        "maatwebsite/excel": "^3.1",
         "predis/predis": "^1.1"
     },
     "require-dev": {
